objects/Product2/fields/A_la_carte_Required_SKUs__c.field-meta.xml
<CustomField>
    <fullName>A_la_carte_Required_SKUs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This SKU is Required for a-la-carte purchases.  Must be included in Quote or have an active subscription(s).
Twin Field from Product &gt; Quote Line &gt; Subscription.</description>
    <label>A-la-carte Required SKUs</label>
    <type>Checkbox</type>
</CustomField>