objects/Product2/fields/AEM_Endpoint_Management_Overlap_SKU__c.field-meta.xml
<CustomField>
    <fullName>AEM_Endpoint_Management_Overlap_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leveraged in Price and Product Rules for mapping legacy SKUs to new AEM Solutions. SS-10578</description>
    <label>AEM Endpoint Management Overlap SKU</label>
    <type>Checkbox</type>
</CustomField>