objects/Product2/fields/AEM_Solution__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the Product as an AEM Solution (FY26 P&amp;P). SS-10352</description>
    <label>AEM Solution</label>
    <type>Checkbox</type>
</CustomField>