objects/Product2/fields/AEM_Solution_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution_Mapping__c</fullName>
    <description>TwinField to QuoteLine.</description>
    <label>AEM Solution Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AEM_Solution_Mapping</valueSetName>
    </valueSet>
</CustomField>