objects/Product2/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>