objects/Product2/fields/Annual_ESR__c.field-meta.xml
<CustomField>
    <fullName>Annual_ESR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premium ESR SKU that requires a minimum 12 term.  Use also in a product rule.</description>
    <label>Annual ESR</label>
    <type>Checkbox</type>
</CustomField>