objects/Product2/fields/Bundle_Component__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Component__c</fullName>
    <label>Bundle Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>