objects/Product2/fields/Bundle_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Bundle_List_Price__c</fullName>
    <label>Bundle List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>