objects/Product2/fields/Bundle_Number__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Number__c</fullName>
    <description>Twinfield: Value is passed to Quote Line</description>
    <label>Bundle Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>