objects/Product2/fields/Bypass_Recalc_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Recalc_Batch_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude products from the being recalculated via SBQQ_QuoteRenewal_Async</description>
    <label>Bypass Recalc Batch Job</label>
    <type>Checkbox</type>
</CustomField>