objects/Product2/fields/COE_Approval_Needed_SKU__c.field-meta.xml
<CustomField>
    <fullName>COE_Approval_Needed_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SKUs that needed COE approval for any reason - Hardware, ect.</description>
    <label>COE Approval Needed SKU</label>
    <type>Checkbox</type>
</CustomField>