objects/Product2/fields/Component_1__c.field-meta.xml
<CustomField>
    <fullName>Component_1__c</fullName>
    <label>Component 1 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>