objects/Product2/fields/Component_1_SKU__c.field-meta.xml
<CustomField>
    <fullName>Component_1_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component 1 SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Component 1 SKU)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>