objects/Product2/fields/Component_2__c.field-meta.xml
<CustomField>
    <fullName>Component_2__c</fullName>
    <label>Component 2 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>