objects/Product2/fields/Component_3_SKU__c.field-meta.xml
<CustomField>
    <fullName>Component_3_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component 3 SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Component 3 SKU)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>