objects/Product2/fields/Component_4__c.field-meta.xml
<CustomField>
    <fullName>Component_4__c</fullName>
    <label>Component 4 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>