objects/Product2/fields/Component_4_SKU__c.field-meta.xml
<CustomField>
    <fullName>Component_4_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component 4 SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Component 4 SKU)</relationshipLabel>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>