objects/Product2/fields/Deal_Desk_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twin field on Quote Line. Used to distinguish if Deal Desk approval is needed on the specific product.</description>
    <label>Deal Desk Approval Needed</label>
    <type>Checkbox</type>
</CustomField>