objects/Product2/fields/Digital_Employee_Experience_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Digital_Employee_Experience_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for SS-3736. Used in software bundle evaluation logic</description>
    <inlineHelpText>When this box is checked, it indicates that this product is a Digital Employee Experience (DEX) Software Bundle.</inlineHelpText>
    <label>Digital Employee Experience Bundle</label>
    <type>Checkbox</type>
</CustomField>