objects/Product2/fields/Do_Not_Roll_Up_for_ARR__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Roll_Up_for_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, this product will be excluded from Day 1 ARR and Exit ARR calculations</inlineHelpText>
    <label>DEPRECATED - Do Not Roll Up for ARR</label>
    <type>Checkbox</type>
</CustomField>