objects/Product2/fields/Do_Not_Show_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Show_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Show End Date</label>
    <type>Checkbox</type>
</CustomField>