objects/Product2/fields/ELV_PoT_PricePercent__c.field-meta.xml
<CustomField>
    <fullName>ELV_PoT_PricePercent__c</fullName>
    <description>The Percent to be applied to the Total Software Spen amount to calculate Price</description>
    <label>PoT Price Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>