objects/Product2/fields/ELV_UsageCreditMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ELV_UsageCreditMultiplier__c</fullName>
    <description>The Credit Multiplier used to calculate included credits for Consumption Products</description>
    <label>Usage Credit Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>