objects/Product2/fields/ELV_UsagePeriod__c.field-meta.xml
<CustomField>
    <fullName>ELV_UsagePeriod__c</fullName>
    <description>TNCI-234 — Usage Period product default.</description>
    <label>Usage Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>