objects/Product2/fields/ELV_UsageQuantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_UsageQuantity__c</fullName>
    <description>TNCI-234 — Default Usage Quantity copied to Quote Line Item on creation.</description>
    <label>Usage Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>