objects/Product2/fields/Exclude_from_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked, the product will be excluded from rebate calculations and roll ups.

        Effective April 30, 2025, the Partner Rebate program has ended. Partner Rebates will not be calculated on any quotes going forward.</description>
    <inlineHelpText>When this box is checked, the product will be excluded from rebate calculations and roll ups.</inlineHelpText>
    <label>DEPRECATED - Exclude from Rebate</label>
    <type>Checkbox</type>
</CustomField>