objects/Product2/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Format: SKU-000, SKU-001, etc</description>
    <externalId>true</externalId>
    <inlineHelpText>Format: SKU-000, SKU-001, etc</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>