objects/Product2/fields/GS_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>GS_Product_Family__c</fullName>
    <label>GS Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Hardware Support</fullName>
            </value>
            <value>
                <fullName>Perpetual License</fullName>
            </value>
            <value>
                <fullName>Subscription License</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>