objects/Product2/fields/GS_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>GS_Product_Type__c</fullName>
    <label>GS Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Licenses &amp; Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>