objects/Product2/fields/Include_In_Annualized_Software_Spend__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Annualized_Software_Spend__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Products eligible for in the Annualized Software Spend count.</description>
    <inlineHelpText>Products eligible for in the Annualized Software Spend count.</inlineHelpText>
    <label>Include In Annualized Software Spend</label>
    <type>Checkbox</type>
</CustomField>