objects/Product2/fields/Include_in_ESR_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ESR_Product_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if the product should be included in the ESR Product Discount field.</description>
    <label>Include in ESR Product Discount</label>
    <type>Checkbox</type>
</CustomField>