objects/Product2/fields/IncludeInSeatsPurchased__c.field-meta.xml
<CustomField>
    <fullName>IncludeInSeatsPurchased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates whether it should be included in the Seats Purchased calculation</description>
    <inlineHelpText>indicates whether it should be included in the Seats Purchased calculation</inlineHelpText>
    <label>Include in Seats Purchased</label>
    <type>Checkbox</type>
</CustomField>