objects/Product2/fields/Is_ESR_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_ESR_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used to count if there are ESR products on the quote</inlineHelpText>
    <label>Is ESR Product</label>
    <type>Checkbox</type>
</CustomField>