objects/Product2/fields/IS_Legacy__c.field-meta.xml
<CustomField>
    <fullName>IS_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Legacy</label>
    <type>Checkbox</type>
</CustomField>