objects/Product2/fields/LicenseMetric__c.field-meta.xml
<CustomField>
    <fullName>LicenseMetric__c</fullName>
    <label>License Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Managed OS</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>FTE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
            <value>
                <fullName>Active User</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>