objects/Product2/fields/MSP_Eligible_Bundle__c.field-meta.xml
<CustomField>
    <fullName>MSP_Eligible_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSP Eligible Bundle</label>
    <type>Checkbox</type>
</CustomField>