objects/Product2/fields/Non_Discountable_Custom__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Discountable Custom</label>
    <type>Checkbox</type>
</CustomField>