objects/Product2/fields/NS_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_ID__c</fullName>
    <label>NS ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>