objects/Product2/fields/Product_Filter_for_Non_Customers__c.field-meta.xml
<CustomField>
    <fullName>Product_Filter_for_Non_Customers__c</fullName>
    <description>Reference in Product Search.</description>
    <formula>IF(
OR(
AEM_Solution__c ,
ISPICKVAL( Product_Line__c ,&quot;OT - Core&quot;), 
ISPICKVAL( Product_Line__c ,&quot;OT - Exposure Management&quot;), 
ISPICKVAL( Product_Line__c ,&quot;Mobile - Endpoint Management&quot;), 
ISPICKVAL( Product_Group__c , &quot;Third Party Software&quot;),
ISPICKVAL( Product_Type__c , &quot;Training&quot;),
ISPICKVAL( Product_Type__c , &quot;Support&quot;),
ISPICKVAL( Product_Type__c , &quot;Conference&quot;),
ISPICKVAL( Product_Type__c , &quot;Hardware&quot;),
ISPICKVAL( Product_Type__c , &quot;Perpetual&quot;)
),True,
False
)</formula>
    <label>Product Filter for Non-Customers</label>
    <type>Checkbox</type>
</CustomField>