objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Twin Field.  Value pushed to quote line field &apos;Product Grouping&apos;</description>
    <label>Partner Discount Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Group</valueSetName>
    </valueSet>
</CustomField>