objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional Instance</fullName>
            </value>
            <value>
                <fullName>AI Usage</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Application Dependency Mapping</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Asset Discovery &amp; Inventory</fullName>
            </value>
            <value>
                <fullName>Asset Discovery &amp; Inventory-GOV</fullName>
            </value>
            <value>
                <fullName>Asset Discovery &amp; Inventory MM</fullName>
            </value>
            <value>
                <fullName>Asset Discovery &amp; Inventory - MSP</fullName>
            </value>
            <value>
                <fullName>Atlas</fullName>
            </value>
            <value>
                <fullName>Authoring</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Certificate Manager</fullName>
            </value>
            <value>
                <fullName>Chronicle</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Management</fullName>
            </value>
            <value>
                <fullName>Client Management-GOV</fullName>
            </value>
            <value>
                <fullName>Client Software Management</fullName>
            </value>
            <value>
                <fullName>Client Software Management-GOV</fullName>
            </value>
            <value>
                <fullName>Client Software Management MM</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Configuration Management</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Connection Manager</fullName>
            </value>
            <value>
                <fullName>Converge</fullName>
            </value>
            <value>
                <fullName>Core-LTD</fullName>
            </value>
            <value>
                <fullName>Core-SLP</fullName>
            </value>
            <value>
                <fullName>Core-UPG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>