objects/Product2/fields/Prorate_Billing__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate Billing</label>
    <type>Checkbox</type>
</CustomField>