objects/Product2/fields/Quantity_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Credits__c</fullName>
    <description>The number of credits sent to Licensing, since this product does not use a standard quantity.</description>
    <inlineHelpText>The number of credits sent to Licensing, since this product does not use a standard quantity.</inlineHelpText>
    <label>Quantity of Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>