objects/Product2/fields/Quota_Retirement_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Quota_Retirement_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Corporate ARR processes. Twins to the Quote Line object. Jira ticket SS-9436</description>
    <inlineHelpText>Checking this box will indicate that this product can be used in Quota Retirement as a part of ARR calculations.</inlineHelpText>
    <label>Quota Retirement Eligible</label>
    <type>Checkbox</type>
</CustomField>