objects/Product2/fields/Ruby__AutoRenew__c.field-meta.xml
<CustomField>
    <fullName>Ruby__AutoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>